// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Spinner cover 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 80px;
  height: 80px;
  border: 16px solid rgb(0,130,155);
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: eXzyYY 0.75s linear infinite;
  animation: eXzyYY 0.75s linear infinite;
}

.c0 {
  z-index: 1000;
  position: fixed;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
}

<div
  className="c0"
  data-testid="spinner"
>
  <div
    className="c1"
    color="rgb(0, 130, 155)"
    size={80}
  />
</div>
`;

exports[`Storyshots Components/Spinner not cover 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border: 8px solid rgb(0,130,155);
  border-right-color: transparent;
  border-radius: 50%;
  -webkit-animation: eXzyYY 0.75s linear infinite;
  animation: eXzyYY 0.75s linear infinite;
}

.c0 {
  z-index: 1000;
}

<div
  className="c0"
  data-testid="spinner"
>
  <div
    className="c1"
    color="rgb(0, 130, 155)"
    size={40}
  />
</div>
`;
